# aqi-openenv-project

./: Dockerfile  README.md  api.py  aqi_data.csv  client.py  environment.py  inference.py  model.py  openenv.yaml  pyproject.toml
server/: Dockerfile  __init__.py  app.py  aqi_openenv_project_environment.py  environment.py  requirement.txt
